# mamba-press

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr-format.yml  test.yml
dev/: commitlint.yml
docs/: recipe.md
examples/: libmambapy-2.3.1-cp313-macos_15_0_arm64.yaml  libmambapy-2.3.1-cp313-manylinux_2_17_x86_64.yaml  libmambapy.yaml  pinocchio-3.7.0-manylinux_2_17_x86_64.yaml
src/mamba_press/: __init__.py  __main__.py  config.py  execution.py  factory.py  packages.py  platform.py  pruning.py  recipe.py  solution_utils.py  typing.py  utils.py  wheel.py
src/mamba_press/filter/: __init__.py  abc.py  files.py  packages.py  protocol.py  solution.py
src/mamba_press/transform/: __init__.py  path.py  protocol.py
src/mamba_press/transform/dynlib/: __init__.py  abc.py  elf.py  macho.py  params.py  relocation.py  utils.py
test/: test_config.py  test_factory.py  test_integration.py  test_platform.py  test_pruning.py  test_recipe.py  test_utils.py  test_wheel.py
test/filter/: test_files.py  test_packages.py
test/transform/: test_path.py
test/transform/dynlib/: test_dynlib_utils.py  test_macho.py
