[project]
name = "mamba-press"
description = "Press Conda packages into wheels"
readme = "README.md"
license = "MIT"
version = "0.0.1"
authors = [
  { name = "Antoine Prouvost", email = "AntoinePrv@users.noreply.github.com" },
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mamba_press"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C90", "I", "YTT", "PT", "D"]
ignore = [
  "D100", # Module docstrings
  "D107", # Magic methods docstring
  "D203", # Blank line after class convention is D211
  "D213", # Docstring summary convention is D212
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }

[tool.pixi.pypi-dependencies]
mamba_press = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.12.3"
libmambapy = ">=2.3.0"
py-lief = "*"

[tool.pixi.tasks]
mamba-press = "python -m mamba_press"

[tool.pixi.feature.test.dependencies]
ruff = ">=0.4.7"
pytest = ">=8.3.0"
mypy = ">=1.11.0"
libmambapy-stubs = "*"
pre-commit = ">=3.8.0,<4.0"
taplo = ">=0.9.2,<0.10"
typos = ">=1.31.2,<2"

[tool.pixi.feature.test.tasks]
# Formatters
fmt-ruff = "ruff format"
fmt-taplo = "taplo fmt"
fmt = [{ task = "fmt-ruff" }, { task = "fmt-taplo" }]
# Checkers
check-ruff-format = "ruff format --check"
check-ruff = "ruff check"
check-mypy = "python -m mypy src/ test/"
check-typos = "typos --write-changes"
check = [
  { task = "check-ruff-format" },
  { task = "check-ruff" },
  { task = "check-mypy" },
  { task = "check-typos" },
]
# Tests
test-pytest = "python -m pytest"
test = { depends-on = ["test-pytest"] }

[tool.pixi.feature.dev.dependencies]
jupyter = ">=1.0.0,<1.1"
python-lsp-server-base = ">=1.11.0,<1.12"
python-lsp-ruff = ">=2.2.1,<2.3"
pylsp-mypy = ">=0.6.8"
typos-lsp = "*"
pre-commit = "*"

[tool.pixi.feature.dev.tasks]
pre-commit = "pre-commit"
